ft(signin-endpoint): Consume signin endpoint
Registered user can sign into the app
User profile is loaded after sign in
User can go to rides page from their profile
User can view all rides
User can view the details of a ride

[(Delivers) #159216107]

--- a/UI/styles/modal.css
+++ b/UI/styles/modal.css
@@ -12,43 +12,36 @@
       background-color: rgb(0, 0, 0);
       background-color: rgba(0, 0, 0, 0.4);
       overflow: hidden;
-      /* padding: 0 50px; */
     }
 
     /* Modal Content/Box */
-
     .modal-content {
       background-color: #fefefe;
       margin: 15% auto;
-      /* 15% from the top and centered */
       padding: 20px;
       border: 1px solid #888;
       max-width: 50%;
-      /* max-width: 400px; */
     }
 
     /* Modal Header */
-
     .modal-header {
       padding: 5px 16px;
-      /* background-color: #5cb85c; */
+      background-color: #f5f5f5;
       border-bottom: 1px solid hsl(210, 9%, 96%);;
       color: white;
-      /* display: grid;
-      align-items: center; */
     }
 
     /* Modal Body */
-
     .modal-body {
       padding: 40px 16px;
+      border-left: 3px solid #09bb8c;
     }
 
     /* Modal Footer */
 
     .modal-footer {
       padding: 10px 16px;
-      background-color: hsl(210, 9%, 96%);
+      background-color: hsl(0, 0%, 94%);
       color: white;
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -64,13 +57,13 @@
     .modal-content {
       position: relative;
       background-color: #fefefe;
-      /* margin: 50px auto; */
+      text-align: center;
       padding: 0;
       border: 1px solid #888;
       width: 80%;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       animation-name: animatetop;
-      animation-duration: 0.4s
+      animation-duration: 0.4s;
     }
 
     /* Add Animation */
@@ -91,13 +84,15 @@
     .close {
       color: #aaa;
       float: right;
-      font-size: 28px;
+      font-size: 25px;
       font-weight: bold;
+      animation-name: animatetop;
+      animation-duration: 0.4s;
     }
 
     .close:hover,
     .close:focus {
-      color: black;
+      color: rgb(24, 24, 24);
       text-decoration: none;
       cursor: pointer;
     }
