--- a/UI/styles/user-profile.css
+++ b/UI/styles/user-profile.css
@@ -110,9 +110,6 @@
   .rides-block {
     grid-template-columns: 1fr;
   }
-}
-
-@media (max-width: 700px) {
   .profile-info {
     display: grid;
     grid-template-columns: 1fr;
@@ -126,13 +123,21 @@
    justify-items: center; 
     border: none;
   }
-
   .profile-name {
     justify-self: center;
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 700px) {
+  .profile-links {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: start;
+  }
+}
+
+
+@media (max-width: 600px) {
   .profile-links {
     display: grid;
     grid-template-columns: 1fr;
