--- a/UI/styles/rides.css
+++ b/UI/styles/rides.css
@@ -52,11 +52,16 @@
 }
 
 .ride-id {
+  display: none;
   background: #1381db;
   padding: 3px 8px;
   color: white;
   border-radius: 50%;
   font-size: 12px;
+}
+
+.btn-view-rides {
+  align-self: end;
 }
 
 @media (max-width: 600px) {
@@ -82,11 +87,11 @@
   background-color: #fff;
   border: 1px solid #d1d5da;
   border-radius: 3px;
-  width: 50%;
+  width: 70%;
 }
 
 .box__header {
-  padding: 16px;
+  padding: 8px;
   margin: -1px -1px 0 -1px;
   background-color: rgb(25, 39, 57);
   border-color: #d1d5da;
@@ -105,12 +110,18 @@
 .box__group {
   padding: 10px 20px;
   display: grid;
-  grid-template-columns: 4fr 1fr;
+  grid-template-columns: 1fr;
   border-bottom: 1px solid #d1d5da;
 }
 
 .box:last-child {
   border-bottom: 0;
+}
+
+@media screen and (min-width: 800px) {
+  .box {
+    width: 50%;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -141,5 +152,32 @@
     grid-gap: 20px;
     background: #eeeeee;
     padding: 0 30px;
+  }
+}
+
+.ride-details {
+  background: #f2f1f1;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 10px;
+}
+
+.loader {
+  display: none;
+  border: 5px solid #eee;
+  border-top: 5px solid var(--dark);
+  border-radius: 50%;
+  z-index: 1;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
