ft(request-to-joinride-endpoint): consume request to join ride endpoint
- user can view a ride
- user can make request to join a ride
- user cannot make request to join ride twice
- add loading animation when user clicks join button
- remove loading animation when request is completed
- show message or error after the request is completed

[(Delivers) #159494324]

--- a/UI/styles/modal.css
+++ b/UI/styles/modal.css
@@ -17,7 +17,7 @@
     /* Modal Content/Box */
     .modal-content {
       background-color: #fefefe;
-      margin: 11% auto;
+      margin: 15% auto;
       padding: 20px;
       max-width: 50%;
     }
@@ -33,6 +33,8 @@
     /* Modal Body */
     .modal-body {
       padding: 40px 16px;
+      display: grid;
+      justify-items: center;
     }
 
     /* Modal Footer */
