--- a/UI/styles/rides.css
+++ b/UI/styles/rides.css
@@ -8,7 +8,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 20px;
-  /* margin: 100px 0; */
+  min-height: 100vh;
   background: #eeeeee;
   padding-right: 100px;
   padding-left: 100px;
@@ -124,16 +124,16 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 600px) {
   .box {
     background-color: #fff;
     border: 1px solid #d1d5da;
     border-radius: 3px;
-    width: 90%;
+    width: 80%;
   }
 
   .box__group {
-    padding: 10px 20px 0 20px;
+    padding: 20px;
     display: grid;
     grid-template-columns: 1fr;
     justify-self: left;
@@ -162,10 +162,14 @@
   padding: 10px;
 }
 
-.loader {
+.loader-bg {
   display: none;
+}
+
+.loader {
+  display: block;
   border: 5px solid #eee;
-  border-top: 5px solid var(--dark);
+  border-top: 5px solid #192739;
   border-radius: 50%;
   z-index: 1;
   width: 50px;
@@ -180,4 +184,13 @@
   100% {
     transform: rotate(360deg);
   }
+}
+
+.request-loader {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  align-items: center;
+  min-height: 50px;
+  width: 100%;
 }
